src/components/common/Piece/Piece.css
.piece {
    background: linear-gradient(
        180deg,
        rgba(var(--color1), 0.3) 0%,
        rgba(var(--color1), 1) 50%,
        rgb(var(--color2), 1) 100%
    );
    background-clip: text;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke: 0.5px rgba(var(--color2), 0.2);
    /* color: var(--color); */
    transform: translate(-1em, -0.5em) rotateX(-30deg) rotateZ(-30deg)
        skew(+20deg, -20deg)
        scale(calc(2 * var(--scale)), calc(5 * var(--scale)));
    animation: emptyPieceAnimation, dropAnimation;
    animation-fill-mode: forwards, backwards;
    animation-duration: 1000ms, 1000ms;
    animation-delay: 0s, calc(1s + var(--delay) * 3);
}

@keyframes emptyPieceAnimation {
    from {
        /* font-size: 0; */
        /* transform: translate(-1em, -1em); */
        /* color: transparent; */
        background: unset;
        color: transparent;
        background-clip: unset;
        -webkit-text-stroke: unset;
    }
}

@keyframes dropAnimation {
    0% {
        background: unset;
        color: transparent;
        background-clip: unset;
        -webkit-text-stroke: unset;
    }
    10% {
        background: radial-gradient(circle, lightskyblue 50%, deepskyblue 100%);
        background-clip: text;
        -webkit-text-fill-color: transparent;
        -webkit-text-stroke: 0.5px rgba(var(--color2), 0.2);
        transform: translate(-4em, -2.5em) rotateX(-30deg) rotateZ(-30deg)
            skew(+20deg, -20deg)
            scale(calc(2 * var(--scale)), calc(5 * var(--scale)));
    }
    100% {
        background: linear-gradient(
            180deg,
            rgba(var(--color1), 0.3) 0%,
            rgba(var(--color1), 1) 50%,
            rgb(var(--color2), 1) 100%
        );
        background-clip: text;
        -webkit-text-fill-color: transparent;
        -webkit-text-stroke: 0.5px rgba(var(--color2), 0.2);
        transform: translate(-1em, -0.5em) rotateX(-30deg) rotateZ(-30deg)
            skew(+20deg, -20deg)
            scale(calc(2 * var(--scale)), calc(5 * var(--scale)));
    }
}

